--- a/OPN-Challenge/Scenes/ProductSummary/ProductSummary.storyboard
+++ b/OPN-Challenge/Scenes/ProductSummary/ProductSummary.storyboard
@@ -169,6 +169,9 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isHiddenWhenSkeletonIsActive" value="YES"/>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="onTappedOrder:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="RlF-Co-ubx"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
